objects/CustomRollUpConfiguration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>SFDC-5361 It will hold mapping of Parent object field and child object field</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChildField__c</fullName>
        <label>Child Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChildObject__c</fullName>
        <label>Child Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CriteriaField__c</fullName>
        <label>Criteria Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentField__c</fullName>
        <label>Parent Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentObject__c</fullName>
        <label>Parent Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Custom RollUp Configuration</label>
</CustomObject>